# fuel-library

./: .gitattributes  .gitignore  .gitmodules  .gitreview  1  1.sh  CHANGELOG  ChangeLog  Gemfile  LICENSE  MAINTAINERS  README.md  Rakefile  Rakefile.rb  build-package.sh  doc-test.conf  make-rdoc.sh  noop.sh  publish-package.sh  pull-all.sh  pull-folsom-all.sh  push-all.sh  push-folsom-all.sh  run_neutron_granular_noops.sh  setup.cfg  setup.py  tox.ini
debian/: 10_linux  changelog  control  copyright  files  fuel-ha-utils.install  fuel-ha-utils.substvars  fuel-library.install  fuel-migrate.install  fuel-misc.install  fuel-misc.links  fuel-notify.install  fuel-rabbit-fence.init  fuel-rabbit-fence.init.in  fuel-rabbit-fence.install  fuel-rabbit-fence.postinst.debhelper  fuel-rabbit-fence.preinst.debhelper  fuel-rabbit-fence.prerm.debhelper  fuel-rabbit-fence.service  fuel-rabbit-fence.substvars  fuel-rabbit-fence.upstart  fuel-umm.dirs  fuel-umm.install  fuel-umm.postinst  fuel-umm.postrm  fuel-umm.preinstall  fuel-umm.umm-br.init.in  fuel-umm.umm-run.init.in  fuel-umm.umm-svc.init.in  fuel-umm.umm-tr.init.in  gbp.conf  rules  ubuntu.install  umm.install  umm.prerm  watch
deletion/: tasks.yaml
deployment/: .gitignore  Gemfile  Puppetfile  archive_modules.sh  failing_tasks.yaml  puppet_modules.rb  remove_modules.sh  update_modules.sh
deployment_scripts/: hiera-override.pp
doc/noop-guide/: setup.cfg
doc/noop-guide/source/: README.rst  conf.py  index.rst  noop_fixtures.rst
docs/: Makefile  common_conf.py  conf.py  index.rst  make.bat
files/: sync_file_from_puppet.rb
fuel_test/: 1.yaml  README.rst  astute.py  base.py  base_test_case.py  ci.py  ci_helpers.py  ciopenstackswift.py  ciopenstackswiftcompact.py  ciswift.py  config.py  destroy.py  drop-table.py  environment.py  helpers.py  integration_test.py  iso_master.py  manage.py  manifest.py  node_roles.py  nova.site.pp.template  openstack_site_pp_base.py  openstack_swift_compact_site_pp_base.py  openstack_swift_site_pp_base.py  pip-requires  prepare.py  prepare_for_tempest.py  prepare_tempest.py  prepare_tempest_ci.py  puppet.agent.conf  root.py  settings.py  settings_compact.py  test.py  test_apply_noop.py  test_cobbler.py  test_config.py  test_manifest.py  test_nova_subclasses.py  test_openstack.py  (+4 more)
iso/: .discinfo  .treeinfo  Makefile  bootstrap_admin_node.sh  functions.sh  ks.cfg
maintenance/: functions.sh  maintenance.sh  settings.conf
provision/: tasks.yaml
specs/: build-package.sh  centos.install  (+10 more)
utils/fuel-tasklib/: README.rst  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt
utils/fuel-tasklib/tasklib/: __init__.py  graph.py  schemas.py  setup_hooks.py  validator.py
utils/fuel-tasklib/tasklib/tests/: __init__.py  test_graph.py  test_validator.py
(+8210 files in other folders)
