[metadata]
name = fuel-library
summary = Puppet library for Fuel
description-file =
    README.md
author = OpenStack Contributors
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

