[metadata]
name = nooptestsguide
summary = Fuel Library Noop Tests Guide
author = Fuel for OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Fuel
classifier =
Environment :: Fuel
Intended Audience :: Information Technology
Intended Audience :: Automation Engineers
License :: OSI Approved :: Apache Software License
Operating System :: POSIX :: Linux
Programming Language :: Ruby
Programming Language :: Puppet
Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]

[build_sphinx]
all_files = 1
build-dir = build
source-dir = source

[wheel]
universal = 1

[pbr]
warnerrors = True
