[metadata]
name = fuel-tasklib
version = 6.1.0
summary = Tasks validation for Fuel
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Fuel/Library_and_Upstream_Modules
description-file =
    README.rst
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6

[entry_points]
console_scripts =
    tasks-validator = tasklib.validator:main

[files]
packages =
    tasklib

[global]
setup-hooks =
    pbr.hooks.setup_hook
    tasklib.setup_hooks.fix_version

[wheel]
universal = 1
